[package]
name = "nonamegw"
version = "0.1.0"
edition = "2018"
default-run = "noname-comet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "noname-comet"
test = true
bench = true
path = "comet/src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tungstenite = { version = "0.14", features = ["rustls-tls"] }
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
futures-util = "0.3.15"
log = "0.4.14"
env_logger = "0.9.0"
nats = "0.9"
anyhow = "1.0.42"
hyper = "0.14"
futures = "0.3.15"
warp = "0.3.1"
byteorder = "1.4.3"
base32 = "0.4.0"
base64 = "0.13.0"
rand = "0.8.4"
dashmap = "4.0.2"
aes = "0.7.4"
block-modes = "0.8.1"
protobuf = "2.24.1"
prost = "0.8.0"
xxhash-rust = { version = "0.8.2", features = ["xxh64"] }
axum = { git = "https://github.com/tokio-rs/axum.git", rev = "a753eac23f29dc0321b87999834d4a1fbc673531", features = ["ws", "headers"] }
md-5 = "0.9.1"
async-nats = "0.10.1"

[dev-dependencies]
chrono = "0.4.19"

[build-dependencies]
prost-build = "0.8.0"
protoc-rust = "2.24.1"
